# ImpelDown

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: rbac_filters.yaml
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/(dashboard)/: dashboard-shell.tsx  layout.tsx
frontend/app/(dashboard)/analytics/: layout.tsx  page.tsx
frontend/app/(dashboard)/chat/: page.tsx
frontend/app/(dashboard)/ingest/: layout.tsx  page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/components/chat/: chat-input.tsx  chat-thread.tsx  message-bubble.tsx
frontend/components/layout/: sidebar.tsx  topbar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/lib/: liquid-glass.ts  providers.tsx
frontend/lib/api/: client.ts
frontend/lib/hooks/: use-chat-mutation.ts  use-health.ts  use-ingest-mutation.ts
frontend/lib/stores/: chat-store.ts
frontend/lib/supabase/: middleware.ts
scripts/: assert_faithfulness_gate.py  docker-down.sh  docker-up.sh  evaluate_ragas.py
src/secrag/: __init__.py  config.py  main.py
src/secrag/api/: health.py  ingest.py  query.py
src/secrag/authorization/: __init__.py  audit.py
src/secrag/cache/: __init__.py  semantic_cache.py
src/secrag/gateway/: __init__.py  auth.py  jailbreak.py  middleware.py  rate_limiter.py
src/secrag/inference/: __init__.py  guardrails.py  llm_client.py  pipeline.py  prompt_builder.py
src/secrag/ingestion/: __init__.py  parser.py  pipeline.py  sanitizer.py  tagger.py
src/secrag/observability/: __init__.py  cost_tracker.py  langsmith.py  metrics.py
src/secrag/retrieval/: __init__.py  qdrant_client.py  rbac_filter.py  retriever.py
tests/: __init__.py
tests/benchmarks/: __init__.py  bench_pipeline.py
tests/integration/: __init__.py  conftest.py  test_ingestion_pipeline.py  test_query_pipeline.py
tests/unit/: __init__.py  test_guardrails.py  test_jailbreak.py  test_rbac_filter.py  test_sanitizer.py  test_tagger.py
