[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secrag"
version = "0.1.0"
description = "Secure Retrieval-Augmented Generation with RBAC & Poisoning Defense"
readme = "docs/SYSTEM_DESIGN.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [
    {name = "SecRAG Team", email = "secrag@example.com"}
]

dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # LLM & RAG orchestration
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",

    # Vector database
    "qdrant-client>=1.7.0",

    # PDF parsing (lightweight pure-Python, no system dependencies)
    "pdfplumber>=0.10.0",

    # Caching & rate limiting
    "redis>=5.0.0",

    # Evaluation & monitoring
    "ragas>=0.1.0",
    "langsmith>=0.1.0",

    # Safety & guardrails
    "transformers>=4.35.0",
    "torch>=2.1.0",

    # Embeddings
    "sentence-transformers>=2.2.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic-core>=2.13.0",
    "pydantic-extra-types>=2.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
    "ftfy>=6.1.0",  # Unicode text cleaning (US-103)

    # Logging & observability
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",

    # Authorization & PBAC
    "casbin>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "ruff>=0.13.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src/secrag --cov-report=html --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/secrag"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "venv"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long (handled by black)
